--- a/Index.html
+++ b/Index.html
@@ -45,6 +45,7 @@
 
     <div id="Projects" class="Projects_Container">
         <h1>Projects</h1>
+
         <div class="Projects">
             <a href="https://arslantodoapp.herokuapp.com/">
                 <div class="Project">
@@ -52,10 +53,11 @@
 
                     <h1>Web Development</h1>
                     <p>This is made using react</p>
-                    <a onclick="changeColor(this)">Preview Project</a>
+                    <a href="https://arslantodoapp.herokuapp.com/" onclick="changeColor(this)">Preview Project</a>
                 </div>
             </a>
         </div>
+
     </div>
     <div id="Skills" class="Skill__Outer_container">
         <h1>Skills</h1>
