--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
 
                     <h1>Web Development</h1>
                     <p>This is made using react</p>
-                    <a href="https://arslantodoapp.herokuapp.com/" onclick="changeColor(this)">Preview Project</a>
+                    <a  target="blank" href="https://arslantodoapp.herokuapp.com/" onclick="changeColor(this)">Preview Project</a>
                 </div>
             </a>
         </div>
