--- a/Index.html
+++ b/Index.html
@@ -49,10 +49,10 @@
         <div class="Projects">
             <a href="https://arslantodoapp.herokuapp.com/">
                 <div class="Project">
-                    <img src="/responsive-web-square.jpg">
+                    <img src="/projects Images/ToDoApp.jpg">
 
-                    <h1>Web Development</h1>
-                    <p>This is made using react</p>
+                    <h1>ToDo App</h1>
+                    <p>This is made using <strong>react</strong>. It has login and user authentication</p>
                     <a  target="blank" href="https://arslantodoapp.herokuapp.com/" onclick="changeColor(this)">Preview Project</a>
                 </div>
             </a>
